--- a/UIKit mr kidnee/Base.lproj/Main.storyboard
+++ b/UIKit mr kidnee/Base.lproj/Main.storyboard
@@ -19,15 +19,89 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="W8J-0P-rrM" customClass="GridView" customModule="UIKit_mr_kidnee" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <subviews>
-                                    <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="hey, mr kidnee" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="goZ-wi-zmN">
-                                        <rect key="frame" x="8" y="52" width="164" height="34"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="kidnee3" translatesAutoresizingMaskIntoConstraints="NO" id="mWf-zj-RJE">
+                                        <rect key="frame" x="72" y="189" width="270" height="241"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="241" id="fju-Lg-POk"/>
+                                        </constraints>
+                                    </imageView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="pOw-hG-wnZ">
+                                        <rect key="frame" x="30" y="475" width="354" height="344"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="hxX-QI-vq4">
+                                                <rect key="frame" x="0.0" y="0.0" width="354" height="344"/>
+                                                <subviews>
+                                                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="g0U-zs-AvN">
+                                                        <rect key="frame" x="0.0" y="0.0" width="354" height="164"/>
+                                                        <subviews>
+                                                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="text1" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ReY-75-lJy">
+                                                                <rect key="frame" x="140" y="65" width="115" height="34"/>
+                                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                                <textInputTraits key="textInputTraits"/>
+                                                            </textField>
+                                                        </subviews>
+                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    </view>
+                                                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="c1j-8f-F7r">
+                                                        <rect key="frame" x="0.0" y="180" width="354" height="164"/>
+                                                        <subviews>
+                                                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="text2" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0cg-3E-YFV">
+                                                                <rect key="frame" x="129" y="51" width="94" height="33"/>
+                                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                                <textInputTraits key="textInputTraits"/>
+                                                            </textField>
+                                                        </subviews>
+                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    </view>
+                                                </subviews>
+                                            </stackView>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="344" id="VO6-nK-9Zz"/>
+                                            <constraint firstAttribute="width" constant="354" id="rYZ-tu-F4Q"/>
+                                        </constraints>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="0Ra-lx-eRO">
+                                        <rect key="frame" x="30" y="75" width="239" height="71"/>
+                                        <subviews>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" text="hey, mr kidnee" textAlignment="natural" minimumFontSize="30" translatesAutoresizingMaskIntoConstraints="NO" id="goZ-wi-zmN">
+                                                <rect key="frame" x="0.0" y="0.0" width="184" height="37.5"/>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" text="damn, hydrate yourself bro " textAlignment="natural" minimumFontSize="20" translatesAutoresizingMaskIntoConstraints="NO" id="R85-vV-I6X">
+                                                <rect key="frame" x="0.0" y="45.5" width="239" height="25.5"/>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <color key="tintColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="R85-vV-I6X" firstAttribute="top" secondItem="0Ra-lx-eRO" secondAttribute="top" constant="45.5" id="eYh-HX-vm9"/>
+                                        </constraints>
+                                    </stackView>
                                 </subviews>
                                 <color key="backgroundColor" red="0.1450980392" green="0.42745098040000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="tintColor" systemColor="systemOrangeColor"/>
+                                <constraints>
+                                    <constraint firstItem="pOw-hG-wnZ" firstAttribute="top" secondItem="mWf-zj-RJE" secondAttribute="bottom" constant="45" id="16b-6l-mxt"/>
+                                    <constraint firstItem="0Ra-lx-eRO" firstAttribute="leading" secondItem="W8J-0P-rrM" secondAttribute="leading" constant="30" id="7lG-Ea-yd4"/>
+                                    <constraint firstItem="pOw-hG-wnZ" firstAttribute="leading" secondItem="W8J-0P-rrM" secondAttribute="leading" constant="30" id="Td1-19-bS8"/>
+                                    <constraint firstItem="mWf-zj-RJE" firstAttribute="leading" secondItem="W8J-0P-rrM" secondAttribute="leading" constant="72" id="Y3r-cd-6jy"/>
+                                    <constraint firstAttribute="trailing" secondItem="pOw-hG-wnZ" secondAttribute="trailing" constant="30" id="Z83-hD-50u"/>
+                                    <constraint firstAttribute="bottom" secondItem="pOw-hG-wnZ" secondAttribute="bottom" constant="77" id="bWb-hA-KfI"/>
+                                    <constraint firstItem="mWf-zj-RJE" firstAttribute="top" secondItem="0Ra-lx-eRO" secondAttribute="bottom" constant="67" id="e5s-Vm-Ria"/>
+                                    <constraint firstAttribute="trailing" secondItem="mWf-zj-RJE" secondAttribute="trailing" constant="72" id="gZw-sK-pqX"/>
+                                </constraints>
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -41,6 +115,7 @@
                     </view>
                     <connections>
                         <outlet property="backgroundRect" destination="W8J-0P-rrM" id="OA4-b1-IkD"/>
+                        <outlet property="saudationMrKidnee" destination="goZ-wi-zmN" id="UXC-Mx-InF"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -49,6 +124,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="kidnee3" width="377" height="342"/>
         <systemColor name="systemOrangeColor">
             <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
