--- a/UIKit mr kidnee/Base.lproj/Main.storyboard
+++ b/UIKit mr kidnee/Base.lproj/Main.storyboard
@@ -20,53 +20,53 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="kidnee3" translatesAutoresizingMaskIntoConstraints="NO" id="mWf-zj-RJE">
-                                        <rect key="frame" x="72" y="189" width="270" height="241"/>
+                                        <rect key="frame" x="15" y="193" width="384" height="241"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="241" id="fju-Lg-POk"/>
                                         </constraints>
                                     </imageView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="pOw-hG-wnZ">
-                                        <rect key="frame" x="30" y="475" width="354" height="344"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="hxX-QI-vq4">
+                                        <rect key="frame" x="30" y="452" width="354" height="344"/>
                                         <subviews>
-                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="hxX-QI-vq4">
-                                                <rect key="frame" x="0.0" y="0.0" width="354" height="344"/>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="g0U-zs-AvN" userLabel="DYKSentencesView">
+                                                <rect key="frame" x="0.0" y="0.0" width="354" height="164"/>
                                                 <subviews>
-                                                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="g0U-zs-AvN" userLabel="DYKSentencesView">
-                                                        <rect key="frame" x="0.0" y="0.0" width="354" height="164"/>
-                                                        <subviews>
-                                                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="text1" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ReY-75-lJy">
-                                                                <rect key="frame" x="140" y="65" width="115" height="34"/>
-                                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                                                <textInputTraits key="textInputTraits"/>
-                                                            </textField>
-                                                        </subviews>
-                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                    </view>
-                                                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="c1j-8f-F7r">
-                                                        <rect key="frame" x="0.0" y="180" width="354" height="164"/>
-                                                        <subviews>
-                                                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="text2" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0cg-3E-YFV">
-                                                                <rect key="frame" x="129" y="51" width="94" height="33"/>
-                                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                                                <textInputTraits key="textInputTraits"/>
-                                                            </textField>
-                                                        </subviews>
-                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                    </view>
+                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="text1" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ReY-75-lJy">
+                                                        <rect key="frame" x="156" y="70" width="42" height="24"/>
+                                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                        <textInputTraits key="textInputTraits"/>
+                                                    </textField>
                                                 </subviews>
-                                            </stackView>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstItem="ReY-75-lJy" firstAttribute="centerX" secondItem="g0U-zs-AvN" secondAttribute="centerX" id="PS8-fS-TCV"/>
+                                                    <constraint firstItem="ReY-75-lJy" firstAttribute="centerY" secondItem="g0U-zs-AvN" secondAttribute="centerY" id="aqF-ZT-90J"/>
+                                                </constraints>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="c1j-8f-F7r">
+                                                <rect key="frame" x="0.0" y="180" width="354" height="164"/>
+                                                <subviews>
+                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="text2" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0cg-3E-YFV">
+                                                        <rect key="frame" x="154.5" y="70" width="45" height="24"/>
+                                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                        <textInputTraits key="textInputTraits"/>
+                                                    </textField>
+                                                </subviews>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstItem="0cg-3E-YFV" firstAttribute="centerX" secondItem="c1j-8f-F7r" secondAttribute="centerX" id="PNZ-0v-n7Z"/>
+                                                    <constraint firstItem="0cg-3E-YFV" firstAttribute="centerY" secondItem="c1j-8f-F7r" secondAttribute="centerY" id="ilv-8Y-409"/>
+                                                </constraints>
+                                            </view>
                                         </subviews>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="344" id="VO6-nK-9Zz"/>
-                                            <constraint firstAttribute="width" constant="354" id="rYZ-tu-F4Q"/>
+                                            <constraint firstAttribute="height" constant="344" id="GDV-3M-M62"/>
                                         </constraints>
                                     </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="0Ra-lx-eRO">
-                                        <rect key="frame" x="30" y="75" width="239" height="71"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="0Ra-lx-eRO">
+                                        <rect key="frame" x="20" y="82" width="386" height="71"/>
                                         <subviews>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" text="hey, mr kidnee" textAlignment="natural" minimumFontSize="30" translatesAutoresizingMaskIntoConstraints="NO" id="goZ-wi-zmN">
                                                 <rect key="frame" x="0.0" y="0.0" width="184" height="37.5"/>
@@ -85,39 +85,41 @@
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
                                         </subviews>
-                                        <constraints>
-                                            <constraint firstItem="R85-vV-I6X" firstAttribute="top" secondItem="0Ra-lx-eRO" secondAttribute="top" constant="45.5" id="eYh-HX-vm9"/>
-                                        </constraints>
                                     </stackView>
                                 </subviews>
                                 <color key="backgroundColor" red="0.1450980392" green="0.42745098040000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="tintColor" systemColor="systemOrangeColor"/>
                                 <constraints>
-                                    <constraint firstItem="pOw-hG-wnZ" firstAttribute="top" secondItem="mWf-zj-RJE" secondAttribute="bottom" constant="45" id="16b-6l-mxt"/>
-                                    <constraint firstItem="0Ra-lx-eRO" firstAttribute="leading" secondItem="W8J-0P-rrM" secondAttribute="leading" constant="30" id="7lG-Ea-yd4"/>
-                                    <constraint firstItem="pOw-hG-wnZ" firstAttribute="leading" secondItem="W8J-0P-rrM" secondAttribute="leading" constant="30" id="Td1-19-bS8"/>
-                                    <constraint firstItem="mWf-zj-RJE" firstAttribute="leading" secondItem="W8J-0P-rrM" secondAttribute="leading" constant="72" id="Y3r-cd-6jy"/>
-                                    <constraint firstAttribute="trailing" secondItem="pOw-hG-wnZ" secondAttribute="trailing" constant="30" id="Z83-hD-50u"/>
-                                    <constraint firstAttribute="bottom" secondItem="pOw-hG-wnZ" secondAttribute="bottom" constant="77" id="bWb-hA-KfI"/>
-                                    <constraint firstItem="mWf-zj-RJE" firstAttribute="top" secondItem="0Ra-lx-eRO" secondAttribute="bottom" constant="67" id="e5s-Vm-Ria"/>
-                                    <constraint firstAttribute="trailing" secondItem="mWf-zj-RJE" secondAttribute="trailing" constant="72" id="gZw-sK-pqX"/>
+                                    <constraint firstItem="0Ra-lx-eRO" firstAttribute="leading" secondItem="W8J-0P-rrM" secondAttribute="leading" constant="20" symbolic="YES" id="0Xh-at-abu"/>
+                                    <constraint firstItem="mWf-zj-RJE" firstAttribute="top" secondItem="0Ra-lx-eRO" secondAttribute="bottom" constant="40" id="9FX-Fs-AcE"/>
+                                    <constraint firstItem="0Ra-lx-eRO" firstAttribute="top" secondItem="W8J-0P-rrM" secondAttribute="topMargin" constant="30" id="K7m-uI-WM3"/>
+                                    <constraint firstItem="hxX-QI-vq4" firstAttribute="leading" secondItem="W8J-0P-rrM" secondAttribute="leading" constant="30" id="RiE-pe-QWi"/>
+                                    <constraint firstAttribute="trailing" secondItem="0Ra-lx-eRO" secondAttribute="trailing" constant="8" id="Y8C-E8-Jgg"/>
+                                    <constraint firstAttribute="bottom" secondItem="hxX-QI-vq4" secondAttribute="bottom" constant="100" id="bgm-LM-hMj"/>
+                                    <constraint firstAttribute="trailing" secondItem="hxX-QI-vq4" secondAttribute="trailing" constant="30" id="eSc-8t-G7F"/>
+                                    <constraint firstItem="mWf-zj-RJE" firstAttribute="centerX" secondItem="W8J-0P-rrM" secondAttribute="centerX" id="hjq-k9-V3m"/>
+                                    <constraint firstAttribute="trailing" secondItem="mWf-zj-RJE" secondAttribute="trailing" constant="15" id="iAT-Wq-Hry"/>
+                                    <constraint firstItem="mWf-zj-RJE" firstAttribute="leading" secondItem="W8J-0P-rrM" secondAttribute="leading" constant="15" id="n9n-su-Ian"/>
                                 </constraints>
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="0.14509803921568626" green="0.42745098039215684" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="W8J-0P-rrM" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="1vJ-xA-c0J"/>
-                            <constraint firstItem="W8J-0P-rrM" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="6iA-lR-Da6"/>
-                            <constraint firstAttribute="bottom" secondItem="W8J-0P-rrM" secondAttribute="bottom" id="O60-cn-JfB"/>
-                            <constraint firstItem="W8J-0P-rrM" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="upt-HZ-SOZ"/>
+                            <constraint firstItem="W8J-0P-rrM" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="4Sf-sK-VKd"/>
+                            <constraint firstItem="W8J-0P-rrM" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="5cq-xI-zPX"/>
+                            <constraint firstAttribute="bottom" secondItem="W8J-0P-rrM" secondAttribute="bottom" id="L5P-vv-lNQ"/>
+                            <constraint firstItem="W8J-0P-rrM" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="hXk-Jz-cAR"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="DYKSentences" destination="g0U-zs-AvN" id="6h3-oF-6rZ"/>
+                        <outlet property="DYKText" destination="ReY-75-lJy" id="DjE-do-UQv"/>
                         <outlet property="backgroundRect" destination="W8J-0P-rrM" id="OA4-b1-IkD"/>
+                        <outlet property="cupsOfWaterText" destination="0cg-3E-YFV" id="Y0n-kq-0eK"/>
                         <outlet property="cupsOfWaterView" destination="c1j-8f-F7r" id="t7V-99-WcE"/>
                         <outlet property="saudationMrKidnee" destination="goZ-wi-zmN" id="UXC-Mx-InF"/>
+                        <outlet property="statusSentence" destination="R85-vV-I6X" id="PnA-Yj-eUB"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
