--- a/UIKit mr kidnee/Base.lproj/Main.storyboard
+++ b/UIKit mr kidnee/Base.lproj/Main.storyboard
@@ -45,11 +45,11 @@
                                             <constraint firstAttribute="height" constant="241" id="fju-Lg-POk"/>
                                         </constraints>
                                     </imageView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="NFT-Vs-cL4">
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="NFT-Vs-cL4">
                                         <rect key="frame" x="40" y="458" width="334" height="288"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="f7l-sm-oVr" userLabel="Stack View / DYK">
-                                                <rect key="frame" x="0.0" y="0.0" width="334" height="157"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="334" height="154"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="did you know?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ltu-sq-ugv">
                                                         <rect key="frame" x="0.0" y="0.0" width="334" height="24"/>
@@ -58,29 +58,21 @@
                                                         <nil key="highlightedColor"/>
                                                         <size key="shadowOffset" width="0.0" height="0.0"/>
                                                     </label>
-                                                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gOY-45-yqr">
-                                                        <rect key="frame" x="0.0" y="29" width="334" height="128"/>
-                                                        <subviews>
-                                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CY6-pa-JRk">
-                                                                <rect key="frame" x="30" y="8" width="267" height="55"/>
-                                                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
-                                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="15"/>
-                                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                                            </textView>
-                                                        </subviews>
-                                                        <viewLayoutGuide key="contentLayoutGuide" id="FEw-DX-q3v"/>
-                                                        <viewLayoutGuide key="frameLayoutGuide" id="7ls-VU-paP"/>
-                                                    </scrollView>
+                                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" adjustsFontForContentSizeCategory="YES" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ror-a8-bqd">
+                                                        <rect key="frame" x="0.0" y="29" width="334" height="125"/>
+                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <mutableString key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupridatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</mutableString>
+                                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                                    </textView>
                                                 </subviews>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="at9-ZF-4lk" userLabel="Stack View / cupsOfWater">
-                                                <rect key="frame" x="0.0" y="167" width="334" height="121"/>
+                                                <rect key="frame" x="0.0" y="156" width="334" height="132"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ftd-jM-yxg">
-                                                        <rect key="frame" x="0.0" y="45" width="45" height="31"/>
+                                                        <rect key="frame" x="0.0" y="50.5" width="45" height="31"/>
                                                         <state key="normal" title="Button"/>
                                                         <buttonConfiguration key="configuration" style="plain" image="circle" catalog="system"/>
                                                         <connections>
@@ -88,13 +80,13 @@
                                                         </connections>
                                                     </button>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="cups of water" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eGI-PE-F7H">
-                                                        <rect key="frame" x="107.5" y="48.5" width="119" height="24"/>
+                                                        <rect key="frame" x="107.5" y="54" width="119" height="24"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lRl-Wm-mrZ">
-                                                        <rect key="frame" x="289" y="45" width="45" height="31"/>
+                                                        <rect key="frame" x="289" y="50.5" width="45" height="31"/>
                                                         <state key="normal" title="Button"/>
                                                         <buttonConfiguration key="configuration" style="plain" image="circle" catalog="system" title=""/>
                                                         <connections>
@@ -134,7 +126,7 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="DYKText" destination="CY6-pa-JRk" id="n8R-YV-bVC"/>
+                        <outlet property="DYKText" destination="Ror-a8-bqd" id="xIV-1b-aND"/>
                         <outlet property="DYKTitleText" destination="Ltu-sq-ugv" id="ddX-0e-sVi"/>
                         <outlet property="DYKView" destination="f7l-sm-oVr" id="Ljf-tc-ZMq"/>
                         <outlet property="cupsOfWaterText" destination="eGI-PE-F7H" id="LAu-lX-W5e"/>
